--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".DBApp"
         android:allowBackup="true"
         android:icon="@mipmap/g1_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".DBApp">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
@@ -23,6 +23,10 @@
         <activity
             android:name=".NewsflashActivity"
             android:label="@string/title_activity_newsflash" >
+        </activity>
+        <activity
+            android:name=".CreateNewsflashActivity"
+            android:label="@string/title_activity_create_newsflash" >
         </activity>
     </application>
 
