edit without saving

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
             android:name=".ChatActivity"
             android:label="@string/title_activity_chat" >
         </activity>
+        <activity
+            android:name=".EditMessageActivity"
+            android:label="title_activity_edit" >
+        </activity>
     </application>
 
 </manifest>
