--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,12 +45,8 @@
             android:label="@string/title_activity_chat" >
         </activity>
         <activity
-        android:name=".EditMessageActivity"
-        android:label="title_activity_edit" >
-    </activity>
-        <activity
             android:name=".EditMessage"
-            android:label="title_activity_edit" >
+            android:label="@string/title_activity_edit" >
         </activity>
 
     </application>
