Revert "Revert "Remove .idea folder and *.iml files.""
This reverts commit 6a75163a8efbe037a809b18a427efdea3f4d0214.

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,11 @@ captures/
 .idea/workspace.xml
 .idea/misc.xml
 
+# I'm through with this !@#$
+.idea/
+app/app.iml
+*.iml
+
 #NDK
 obj/
 app/app.iml
