--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,18 @@
         android:icon="@mipmap/g1_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".NewsflashActivity"
-            android:label="@string/title_activity_newsflash" >
+            android:label="@string/title_activity_newsflash">
         </activity>
         <activity
             android:name=".CreateNewsflashActivity"
@@ -42,7 +42,8 @@
         </activity>
         <activity
             android:name=".ChatActivity"
-            android:label="@string/title_activity_chat" >
+            android:label="@string/title_activity_chat"
+            android:launchMode="singleTop">
         </activity>
         <activity
             android:name=".EditMessageActivity"
@@ -50,11 +51,12 @@
         </activity>
         <activity
             android:name=".SelectChatRoomActivity"
-            android:label="@string/title_activity_chat" >
+            android:label="@string/title_activity_chat"
+            android:launchMode="singleTop">
         </activity>
         <activity
             android:name=".CreateNewChannelActivity"
-            android:label="@string/title_activity_chat" >
+            android:label="@string/title_activity_chat">
         </activity>
 
     </application>
