Rename the chat room related activites to be consistent with project. SelectChatRoomActivity => ChannelListActivity, CreateNewChannelActivity => CreateChannelActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,12 +50,12 @@
             android:label="@string/title_activity_edit" >
         </activity>
         <activity
-            android:name=".SelectChatRoomActivity"
+            android:name=".ChannelListActivity"
             android:label="@string/title_activity_chat"
             android:launchMode="singleTop">
         </activity>
         <activity
-            android:name=".CreateNewChannelActivity"
+            android:name=".CreateChannelActivity"
             android:label="@string/title_activity_chat">
         </activity>
 
