--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity
             android:name=".NewsflashActivity"
-            android:label="@string/title_activity_newsflash">
+            android:label="@string/title_activity_newsflash"
+            android:launchMode="singleTop">
         </activity>
         <activity
             android:name=".CreateNewsflashActivity"
@@ -30,11 +31,13 @@
         </activity>
         <activity
             android:name=".AdminActivity"
-            android:label="@string/title_activity_admin" >
+            android:label="@string/title_activity_admin"
+            android:launchMode="singleTop">
         </activity>
         <activity
             android:name=".UserListActivity"
-            android:label="@string/title_activity_user_list" >
+            android:label="@string/title_activity_user_list"
+            android:launchMode="singleTop">
         </activity>
         <activity
             android:name=".RegisterActivity"
